# go_strings_extractor

./: .gitignore  README.md  pyproject.toml
src/go_strings_extractor/: __init__.py  cli.py  core.py  detect.py  fallback.py  native_disasm.py  pclntab.py  sections.py  symbols.py  utils.py
src/go_strings_extractor/analyzers/: arm64.py  x86.py
tests/: conftest.py  test_binary_parsers.py  test_extractor.py  test_fallback_patterns.py  test_noise_regressions.py
tests/fixtures/: build_samples.py  network.go
