[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "go-strings-extractor"
version = "0.1.0"
description = "Extract user-authored strings and constants from compiled Go binaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]

[project.scripts]
go-strings-extractor = "go_strings_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/go_strings_extractor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
